removing position fixed because the flash message was not showing on firefox, see with Valentine how to fix this

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -156,16 +156,16 @@ a.inactive {
 }
 
 .flashmsg {
-    position: fixed;
+    /* position: fixed; when position is fixed it does not show */
     margin-top:10px;
     margin-left:auto;
     margin-right:auto;
     width:70%;
     -padding: 30px;
     font-size: 14px;
-    font-weight: 700;    
-    border-width: 1px; 
-    border-color: lightgray; 
+    font-weight: 700;
+    border-width: 1px;
+    border-color: lightgray;
 }
 
 .label-as-badge {
